[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/lift.png" type="Texture" id=1]
[ext_resource path="res://scenes/props/Single Platform Lift/Single Platform Lift.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.04455
height = 40.9109

[sub_resource type="Animation" id=2]
resource_name = "lift_down"
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "lift_up"
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.0996552, -0.00335312, 0, 0, 0, 0, -0.407654, 372.332 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19.9449, 21.7656 )

[node name="Single Platform Lift" type="Node2D"]
script = ExtResource( 2 )

[node name="Kinematic" type="KinematicBody2D" parent="."]
position = Vector2( -0.590881, -20.6182 )
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="Kinematic"]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Kinematic"]
position = Vector2( 1, -46 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Kinematic"]
position = Vector2( 0, 20.2643 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
playback_speed = 0.2
anims/lift_down = SubResource( 2 )
anims/lift_up = SubResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.0996552, -0.00335312 )
rotate = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
position = Vector2( -0.690536, -20.6148 )
remote_path = NodePath("../../../Kinematic")

[node name="Upper_detect_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upper_detect_area"]
shape = SubResource( 5 )

[node name="Lower_detect_area" type="Area2D" parent="."]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lower_detect_area"]
position = Vector2( -1.40765, 362.029 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Upper_detect_area" to="." method="_on_Upper_detect_area_body_entered"]
[connection signal="body_exited" from="Upper_detect_area" to="." method="_on_Upper_detect_area_body_exited"]
[connection signal="body_entered" from="Lower_detect_area" to="." method="_on_Lower_detect_area_body_entered"]
[connection signal="body_exited" from="Lower_detect_area" to="." method="_on_Lower_detect_area_body_exited"]
